--- a/src/MvcTricks.RoundTripModelBinding.csproj
+++ b/src/MvcTricks.RoundTripModelBinding.csproj
@@ -37,18 +37,20 @@
     <DocumentationFile>bin\Release\MvcTricks.RoundTripModelBinding.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup>
-    <SignAssembly>true</SignAssembly>
+    <SignAssembly>false</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
     <AssemblyOriginatorKeyFile>MvcTricks.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="ServiceStack.Text">
+      <HintPath>..\packages\ServiceStack.Text.3.9.43\lib\net35\ServiceStack.Text.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Abstractions" />
-    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Web.Mvc, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Web.WebPages, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
   </ItemGroup>
@@ -69,10 +71,8 @@
     <Compile Include="Enums.cs" />
     <Compile Include="HtmlHelperExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Serialization\DateTimeConverter.cs" />
     <Compile Include="Serialization\GenericRuntimeTypeConverter.cs" />
     <Compile Include="Serialization\ITypeSerializer.cs" />
-    <Compile Include="Serialization\MailAddressConverter.cs" />
     <Compile Include="Serialization\ModelData.cs" />
     <Compile Include="Serialization\RuntimeTypeConverter.cs" />
     <Compile Include="Serialization\Serializer.cs" />
@@ -81,6 +81,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="MvcTricks.snk" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
