Deleted signing key

--- a/src/MvcTricks.RoundTripModelBinding.csproj
+++ b/src/MvcTricks.RoundTripModelBinding.csproj
@@ -40,7 +40,8 @@
     <SignAssembly>false</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
-    <AssemblyOriginatorKeyFile>MvcTricks.snk</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>
+    </AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="ServiceStack.Text">
@@ -80,7 +81,6 @@
     <Compile Include="Utilities\ExpressionTools.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="MvcTricks.snk" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
