--- a/Mvc4Test/packages.config
+++ b/Mvc4Test/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="BundleTransformer.Core" version="1.6.24" targetFramework="net45" />
   <package id="EntityFramework" version="5.0.0" targetFramework="net45" />
   <package id="jQuery" version="1.8.2" targetFramework="net45" />
   <package id="jQuery.UI.Combined" version="1.9.2" targetFramework="net45" />
@@ -23,6 +24,7 @@
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
   <package id="MvcTricks.RoundTripModelBinding" version="2.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="5.0.2" targetFramework="net45" />
   <package id="ServiceStack.Text" version="3.9.43" targetFramework="net45" />
   <package id="WebGrease" version="1.3.0" targetFramework="net45" />
 </packages>
