--- a/src/packages.config
+++ b/src/packages.config
@@ -1,4 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.AspNet.Web.Optimization" version="1.0.0" targetFramework="net40" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
+  <package id="Microsoft.Web.Optimization" version="0.1" targetFramework="net40" />
   <package id="ServiceStack.Text" version="3.9.43" targetFramework="net40" />
+  <package id="WebGrease" version="1.3.0" targetFramework="net40" />
 </packages>
