--- a/src/MvcTricks.RoundTripModelBinding.csproj
+++ b/src/MvcTricks.RoundTripModelBinding.csproj
@@ -92,6 +92,7 @@
     <Compile Include="Enums.cs" />
     <Compile Include="HtmlHelperExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Serialization\ISerializationHandler.cs" />
     <Compile Include="Serialization\ModelData.cs" />
     <Compile Include="Serialization\Serializer.cs" />
     <Compile Include="TypeManagement\TypeManager.cs" />
